--- a/src/assets/prime.css
+++ b/src/assets/prime.css
@@ -22,5 +22,30 @@ body {
 
 main {
   flex: 1;
-  position: relative;
+}
+
+.fade-in {
+  animation: fadeIn 2s ease-in forwards;
+}
+
+.fade-out {
+  animation: fadeOut 2s ease-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
